2017.10/_sources/plugins/available/feature-classifier/fit-classifier-sklearn.txt
fit-classifier-sklearn: Train an almost arbitrary scikit-learn classifier
=========================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-classifier fit-classifier-sklearn [OPTIONS]

     Train a scikit-learn classifier to classify reads.

   Options:
     --i-reference-reads PATH        Artifact: FeatureData[Sequence]  [required]
     --i-reference-taxonomy PATH     Artifact: FeatureData[Taxonomy]  [required]
     --p-classifier-specification TEXT
                                     [required]
     --i-class-weight PATH           Artifact: FeatureTable[RelativeFrequency]
                                     [optional]
     --o-classifier PATH             Artifact: TaxonomicClassifier [required if
                                     not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Train an almost arbitrary scikit-learn classifier

   Train a scikit-learn classifier to classify reads.

   Parameters
   ----------
   reference_reads : FeatureData[Sequence]
   reference_taxonomy : FeatureData[Taxonomy]
   class_weight : FeatureTable[RelativeFrequency], optional
   classifier_specification : Str

   Returns
   -------
   classifier : TaxonomicClassifier</pre>
       </div>
     </div>
   </div>