2018.8/_sources/plugins/available/feature-classifier/fit-classifier-sklearn.txt
fit-classifier-sklearn: Train an almost arbitrary scikit-learn classifier
=========================================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: feature-classifier:fit-classifier-sklearn.bib
   :all:
   :keyprefix: feature-classifier:fit-classifier-sklearn:
   :labelprefix: feature-classifier:fit-classifier-sklearn:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-classifier fit-classifier-sklearn [OPTIONS]

     Train a scikit-learn classifier to classify reads.

   Options:
     --i-reference-reads ARTIFACT PATH FeatureData[Sequence]
                                     [required]
     --i-reference-taxonomy ARTIFACT PATH FeatureData[Taxonomy]
                                     [required]
     --p-classifier-specification TEXT
                                     [required]
     --i-class-weight ARTIFACT PATH FeatureTable[RelativeFrequency]
                                     [optional]
     --o-classifier ARTIFACT PATH TaxonomicClassifier
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_classifier.methods import fit_classifier_sklearn

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Train an almost arbitrary scikit-learn classifier

   Train a scikit-learn classifier to classify reads.

   Parameters
   ----------
   reference_reads : FeatureData[Sequence]
   reference_taxonomy : FeatureData[Taxonomy]
   classifier_specification : Str
   class_weight : FeatureTable[RelativeFrequency], optional

   Returns
   -------
   classifier : TaxonomicClassifier</pre>
       </div>
     </div>
   </div>